--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --font-main: black;
 }
 
-.navbar{
+/* .navbar{
   border-bottom: 2px solid var(--primary);
   box-shadow: 0 0 2px 0 black;
   
@@ -22,4 +22,4 @@
 .nav-pills .nav-link.active{
   background: var(--accent-light)!important;
   border-radius: 0;
-}
+} */
