--- a/src/ml/style.css
+++ b/src/ml/style.css
@@ -15,6 +15,16 @@
     
     box-sizing: border-box;
 }
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    display: none;
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--secondary);
+    display: visible;
+}
 li{
     list-style: none;
 }
@@ -38,10 +48,27 @@ a:hover{
 
 header{
     padding: 10%;
+    position: relative;
     /* background: #a8dadcc7; */
     background-color: #d9f2f3;
 }
-
+header p{
+    position: relative;
+}
+.pattern {
+    position: absolute;
+    height: 28em;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    width: 50%;
+    transform: rotate(225deg) translateX(-38em) translateY(47em);
+    background: linear-gradient(135deg, #d9f2f3 25%, transparent 25%) -50px 0, linear-gradient(225deg, #d9f2f3 25%, transparent 25%) 0px 0, linear-gradient(315deg, #d9f2f3 25%, transparent 25%), linear-gradient(45deg, #d9f2f3 25%, transparent 25%);
+    background-size: 100px 100px;
+    background-color: #EC173A;
+    background-color: blueviolet;
+    opacity: 0.3;
+}
 .intro{
     color: var(--accent);
     font-size: 34px;
@@ -61,6 +88,11 @@ header{
 margin: 0 20px;
 border-top: 2px solid var(--primary);
 padding: 30px;
+}
+#project-list{
+    max-width: 900px;
+    margin: auto;
+    width: 100%;
 }
 #project-listing-container li{
     margin-bottom: 30px;
