--- a/src/ml/style.css
+++ b/src/ml/style.css
@@ -107,6 +107,7 @@ header > .sub-intro i:hover{
 }
 #project-listing-container li{
     margin-bottom: 30px;
+    padding: 0;
 }
 .project-item-container{
     width: 250px;
@@ -195,6 +196,6 @@ header > .sub-intro i:hover{
     }
     
     #about-container ul.highlights{
-       width: max-content;
+       width: 100%;
     }
 }
