--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -24,8 +24,11 @@ layout: default
       {% if page.description %}
         <p class="post-description">{{ page.description }}</p>
       {% endif %}
+
     </header>
 
+
+    {% comment %}
     <article>
       <div class="cv">
         {% for entry in site.data.cv %}
@@ -51,6 +54,7 @@ layout: default
         {% endfor %}
       </div>
     </article>
+    {% endcomment %}
   </div>
 {% else %}
   <div class="post">
@@ -75,8 +79,10 @@ layout: default
       {% if page.description %}
         <p class="post-description">{{ page.description }}</p>
       {% endif %}
+      <object data="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" width="100%" height="900"  type="application/pdf"></object>
     </header>
 
+    {% comment %}
     <article>
       <div class="cv">
         {% for data in site.data.resume %}
@@ -122,6 +128,7 @@ layout: default
           </div>
         {% endfor %}
       </div>
-    </article>
+      </article>
+  {% endcomment %}
   </div>
 {% endunless %}
