--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -19,8 +19,11 @@ layout: default
       {% if page.description %}
         <p class="post-description">{{ page.description }}</p>
       {% endif %}
+
     </header>
 
+
+    {% comment %}
     <article>
       <div class="cv">
         {% for entry in site.data.cv %}
@@ -46,6 +49,7 @@ layout: default
         {% endfor %}
       </div>
     </article>
+    {% endcomment %}
   </div>
 {% else %}
   <div class="post">
@@ -65,8 +69,10 @@ layout: default
       {% if page.description %}
         <p class="post-description">{{ page.description }}</p>
       {% endif %}
+      <object data="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" width="100%" height="900"  type="application/pdf"></object>
     </header>
 
+    {% comment %}
     <article>
       <div class="cv">
         {% for data in site.data.resume %}
@@ -112,6 +118,7 @@ layout: default
           </div>
         {% endfor %}
       </div>
-    </article>
+      </article>
+  {% endcomment %}
   </div>
 {% endunless %}
